Work in progress, one test passing two to go